--- a/styles.css
+++ b/styles.css
@@ -97,3 +97,8 @@
 .random {
   background-image: url('../assets/random.png');
 }
+
+.character.eliminated {
+  opacity: 0.5;
+  transform: scale(0.8);
+}
