Select hero based on splash screen choice

--- a/styles.css
+++ b/styles.css
@@ -90,8 +90,8 @@
   background-image: url('assets/petert.png');
 }
 
-.ash {
-  background-image: url('assets/ash.png');
+.aisling {
+  background-image: url('assets/aisling.png');
 }
 
 .random {
