--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,7 @@
   color: transparent;
 }
 
+/* TEMPORARY CHANGE TO FORCE GITHUB PAGES REBUILD! */
 .elia {
   background-image: url('assets/elia.png');
 }
