--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
   text-align: center;
   min-height: 100%;
   width: 100%;
-  padding: 50px;
+  padding: 50px 50px 50px 20px;
   background-color: #9c5aa6;
   z-index: 1000000000;
   overflow: auto;
